--- a/python/flask/simple_web_app/templates/signup.html
+++ b/python/flask/simple_web_app/templates/signup.html
@@ -7,6 +7,8 @@
     <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="http://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
     <link href="../static/signup.css" rel="stylesheet">
+    <script src="../static/js/jquery-1.12.4.js"></script>
+    <script src="../static/js/signUp.js"></script>
 </head>
 <body>
     <div class="container">
