--- a/python/flask/simple_web_app/templates/userHome.html
+++ b/python/flask/simple_web_app/templates/userHome.html
@@ -5,20 +5,83 @@
     <title>Python Flask Bucket List App</title>
     <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="http://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
+    <script src="../static/js/jquery-1.12.4.js"></script>
+    <script>
+        $(function() {
+            $.ajax({
+                url: '/getWish',
+                type: 'GET',
+                success: function(res) {
+                    var div = $('<div>')
+                        .attr('class', 'list-group')
+                        .append($('<a>')
+                            .attr('class', 'list-group-item active')
+                            .append($('<h4>')
+                                .attr('class', 'list-group-item-heading'),
+                                $('<p>')
+                                .attr('class', 'list-group-item-text')));
+                    var wishObj = JSON.parse(res);
+                    var wish = '';
+                    $.each(wishObj, function(index, value) {
+                        wish = $(div).clone();
+                        $(wish).find('h4').text(value.Title);
+                        $(wish).find('p').text(value.Description);
+                        $('.jumbotron').append(wish);
+                    });
+                },
+                error: function(error) {
+                    console.log(error);
+                }
+            });
+        });
+    </script>
 </head>
 <body>
     <div class="container">
         <div class="header">
             <nav>
                 <ul class="nav nav-pills pull-right">
-                    <li role="presentation" class="active"><a href="/logout">Logout</a></li>
+                    <li role="presentation" class="active"><a href="/#">Add Item</a></li>
+                    <li role="presentation"><a href="/showAddWish">Add Wish</a></li>
+                    <li role="presentation"><a href="/logout">Logout</a></li>
                 </ul>
             </nav>
             <h3 class="text-muted">Python Flask App</h3>
         </div>
+        <section>
+            <form class="form-horizontal" method="post" action="/addWish">
+                <fieldset>
+                    <legend>Create Your Wish</legend>
+                    <div class="form-group">
+                        <label class="col-md-4 control-label" for="txtTitle">Title</label>
+                        <div class="col-md-4">
+                            <input id="txtTitle" name="inputTitle" type="text" placeholder="placeholder" class="form-control input-md">
+                        </div>
+                    </div>
 
+                    <div class="form-group">
+                        <label class="col-md-4 control-label" for="txtPost">Post</label>
+                        <div class="col-md-4">
+                            <textarea class="form-control" id="txtPost" name="inputDescription"></textarea>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="col-md-4 control-label" for="singlebutton"></label>
+                        <div class="col-md-4">
+                            <input id="singlebutton" name="singlebutton" class="btn btn-primary" type="submit" value="Publish" />
+                        </div>
+                    </div>
+                </fieldset>
+            </form>
+        </section>
         <div class="jumbotron">
-            <h1>Welcome home!!</h1>
+            <div class="list-group">
+                <a href="#" class="list-group-item active">
+                    <h4 class="list-group-item-heading">Wish Title</h4>
+                    <p class="list-group-item-text">Wish Description</p>
+                </a>
+            </div>
         </div>
 
         <footer class="footer">
