--- a/python/flask/simple_web_app/templates/userHome.html
+++ b/python/flask/simple_web_app/templates/userHome.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,35 +8,111 @@
     <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="http://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
     <script src="../static/js/jquery-1.12.4.js"></script>
+    <script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/jquery.templates/beta1/jquery.tmpl.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
     <script>
         $(function() {
+            GetWishes();
+            $('#btnUpdate').click(function() {
+                $.ajax({
+                    url: '/updateWish',
+                    data: {
+                        title: $('#editTitle').val(),
+                        description: $('#editDescription').val(),
+                        id: localStorage.getItem('editId')
+                    },
+                    type: 'POST',
+                    success: function(res) {
+                        $('#editModal').modal('hide');
+                        GetWishes();
+                    },
+                    error: function(error) {
+                        console.log(error);
+                    }
+                })
+            });
+
+        });
+
+        function GetWishes() {
             $.ajax({
                 url: '/getWish',
                 type: 'GET',
                 success: function(res) {
-                    var div = $('<div>')
-                        .attr('class', 'list-group')
-                        .append($('<a>')
-                            .attr('class', 'list-group-item active')
-                            .append($('<h4>')
-                                .attr('class', 'list-group-item-heading'),
-                                $('<p>')
-                                .attr('class', 'list-group-item-text')));
                     var wishObj = JSON.parse(res);
-                    var wish = '';
-                    $.each(wishObj, function(index, value) {
-                        wish = $(div).clone();
-                        $(wish).find('h4').text(value.Title);
-                        $(wish).find('p').text(value.Description);
-                        $('.jumbotron').append(wish);
-                    });
+                    $('#ulist').empty();
+                    $('#listTemplate').tmpl(wishObj).appendTo('#ulist');
                 },
                 error: function(error) {
                     console.log(error);
                 }
             });
-        });
+        }
+
+        function Edit(elm) {
+           $.ajax({
+                url: '/getWishById',
+                data: {
+                    id: $(elm).attr('data-id')
+                },
+                type: 'POST',
+                success: function(res) {
+                    var data = JSON.parse(res);
+                    $('#editTitle').val(data[0]['Title']);
+                    $('#editDescription').val(data[0]['Description']);
+                    localStorage.setItem('editId',$(elm).attr('data-id'));
+
+                    $('#editModal').modal()
+                },
+                error: function(error) {
+                    console.log(error);
+                }
+            });
+        }
+
+        function ConfirmDelete(elem) {
+            localStorage.setItem('deleteId', $(elem).attr('data-id'));
+            $('#deleteModal').modal();
+        }
+
+        function Delete() {
+           $.ajax({
+                    url: '/deleteWish',
+                    data: {
+                        id: localStorage.getItem('deleteId')
+                    },
+                    type: 'POST',
+                    success: function(res) {
+                        var result = JSON.parse(res);
+                        console.log(result.status);
+                        if (result.status == 'OK') {
+                            $('#deleteModal').modal('hide');
+                            GetWishes();
+                        } else {
+                            alert(result.status);
+                        }
+                    },
+                    error: function(error) {
+                        console.log(error);
+                    }
+                 });
+        }
     </script>
+    <style>
+    .trash {
+        color: rgb(209, 91, 71);
+    }
+    .panel-body .checkbox {
+        display: inline-block;
+        margin: 0px;
+    }
+    .list-group {
+        margin-bottom: 0px;
+    }
+    .modal-dialog{
+        z-index:1041;
+     }
+    </style>
 </head>
 <body>
     <div class="container">
@@ -48,39 +126,69 @@
             </nav>
             <h3 class="text-muted">Python Flask App</h3>
         </div>
-        <section>
-            <form class="form-horizontal" method="post" action="/addWish">
-                <fieldset>
-                    <legend>Create Your Wish</legend>
-                    <div class="form-group">
-                        <label class="col-md-4 control-label" for="txtTitle">Title</label>
-                        <div class="col-md-4">
-                            <input id="txtTitle" name="inputTitle" type="text" placeholder="placeholder" class="form-control input-md">
-                        </div>
-                    </div>
 
-                    <div class="form-group">
-                        <label class="col-md-4 control-label" for="txtPost">Post</label>
-                        <div class="col-md-4">
-                            <textarea class="form-control" id="txtPost" name="inputDescription"></textarea>
-                        </div>
-                    </div>
+        <script id="listTemplate" type="text/x-jQuery-tmpl">
+            <li class="list-group-item">
+                <div class="checkbox">
+                    <label>
+                        ${Title}
+                    </label>
+                </div>
+                <div class="pull-right action-buttons">
+                     <a data-id=${Id} onclick="Edit(this)" ><span class="glyphicon glyphicon-pencil"></span></a>
+                     <a data-id=${Id} onclick="ConfirmDelete(this)" ><span class="glyphicon glyphicon-trash"></span></a>
+                </div>
+            </li>
+        </script>
 
-                    <div class="form-group">
-                        <label class="col-md-4 control-label" for="singlebutton"></label>
-                        <div class="col-md-4">
-                            <input id="singlebutton" name="singlebutton" class="btn btn-primary" type="submit" value="Publish" />
-                        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="panel-body">
+                    <ul id="ulist" class="list-group">
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="editModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span>
+                        </button>
+                        <h4 class="modal-title" id="editModalLabel">Update Wish</h4>
                     </div>
-                </fieldset>
-            </form>
-        </section>
-        <div class="jumbotron">
-            <div class="list-group">
-                <a href="#" class="list-group-item active">
-                    <h4 class="list-group-item-heading">Wish Title</h4>
-                    <p class="list-group-item-text">Wish Description</p>
-                </a>
+                    <div class="modal-body">
+                        <form role="form">
+                            <div class="form-group">
+                                <label for="recipient-name" class="control-label">Title:</label>
+                                <input type="text" class="form-control" id="editTitle">
+                            </div>
+                            <div class="form-group">
+                                <label for="message-text" class="control-label">Description:</label>
+                                <textarea class="form-control" id="editDescription"></textarea>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        <button type="button" id="btnUpdate" class="btn btn-primary ">Update</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header" style="text-align:center;">
+                        <h4 class="modal-title" style="color:red;" id="deleteModalLabel">You are going to Delete this forever !!</h4>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                        <button type="button" class="btn btn-primary" onclick="Delete()">Delete</button>
+                    </div>
+                </div>
             </div>
         </div>
 
