--- a/python/flask/simple_web_app/templates/userHome.html
+++ b/python/flask/simple_web_app/templates/userHome.html
@@ -12,7 +12,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
     <script>
         $(function() {
-            GetWishes();
+            GetWishes(1);
             $('#btnUpdate').click(function() {
                 $.ajax({
                     url: '/updateWish',
@@ -24,7 +24,7 @@
                     type: 'POST',
                     success: function(res) {
                         $('#editModal').modal('hide');
-                        GetWishes();
+                        GetWishes(1);
                     },
                     error: function(error) {
                         console.log(error);
@@ -34,14 +34,87 @@
 
         });
 
-        function GetWishes() {
+        function GetWishes(_page) {
+            var _offset = (_page - 1) * 2;
+
             $.ajax({
                 url: '/getWish',
-                type: 'GET',
+                type: 'POST',
+                data: {
+                    offset: _offset
+                },
                 success: function(res) {
+                    var itemsPerPage = 2;
                     var wishObj = JSON.parse(res);
+
                     $('#ulist').empty();
-                    $('#listTemplate').tmpl(wishObj).appendTo('#ulist');
+                    $('#listTemplate').tmpl(wishObj[0]).appendTo('#ulist');
+
+                    var total = wishObj[1]['total'];
+                    var pageCount = total / itemsPerPage;
+                    var pageRem = total % itemsPerPage;
+                    if (pageRem != 0) {
+                        pageCount = Math.floor(pageCount) + 1;
+                    }
+
+                    $('.pagination').empty();
+
+                    var pageStart = $('#hdnStart').val();
+                    var pageEnd = $('#hdnEnd').val();
+
+                    if (pageStart > 5) {
+                        var aPrev = $('<a/>').attr({
+                                'href': '#'
+                            }, {
+                                'aria-label': 'Previous'
+                            })
+                            .append($('<span/>').attr('aria-hidden', 'true').html('&laquo;'));
+
+                        $(aPrev).click(function() {
+                            $('#hdnStart').val(Number(pageStart) - 5);
+                            $('#hdnEnd').val(Number(pageStart) - 5 + 4);
+                            GetWishes(Number(pageStart) - 5);
+                        });
+
+                        var prevLink = $('<li/>').append(aPrev);
+                        $('.pagination').append(prevLink);
+                    }
+
+                    for (var i = Number(pageStart); i <= Number(pageEnd); i++) {
+
+                        if (i > pageCount) {
+                            break;
+                        }
+
+                        var aPage = $('<a/>').attr('href', '#').text(i);
+
+                        $(aPage).click(function(i) {
+                            return function() {
+                                GetWishes(i);
+                            }
+                        }(i));
+                        var page = $('<li/>').append(aPage);
+
+                        if ((_page) == i) {
+                            $(page).attr('class', 'active');
+                        }
+
+                        $('.pagination').append(page);
+                    }
+                    if ((Number(pageStart) + 5) <= pageCount) {
+                        var nextLink = $('<li/>').append($('<a/>').attr({
+                                'href': '#'
+                            }, {
+                                'aria-label': 'Next'
+                            })
+                            .append($('<span/>').attr('aria-hidden', 'true').html('&raquo;').click(function() {
+                                $('#hdnStart').val(Number(pageStart) + 5);
+                                $('#hdnEnd').val(Number(pageStart) + 5 + 4);
+                                GetWishes(Number(pageStart) + 5);
+
+                            })));
+                        $('.pagination').append(nextLink);
+                    }
                 },
                 error: function(error) {
                     console.log(error);
@@ -87,7 +160,7 @@
                         console.log(result.status);
                         if (result.status == 'OK') {
                             $('#deleteModal').modal('hide');
-                            GetWishes();
+                            GetWishes(1);
                         } else {
                             alert(result.status);
                         }
@@ -146,6 +219,10 @@
                 <div class="panel-body">
                     <ul id="ulist" class="list-group">
                     </ul>
+                    <nav>
+                        <ul class="pagination">
+                        </ul>
+                    </nav>
                 </div>
             </div>
         </div>
@@ -191,6 +268,9 @@
                 </div>
             </div>
         </div>
+
+        <input type="hidden" id="hdnStart" value="1" />
+        <input type="hidden" id="hdnEnd" value="5"/>
 
         <footer class="footer">
             <p>&copy; Company 2016</p>
